--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 id="counter">Score: 0</h2>
+    <h2 id="points">Score: 0</h2>
     <h2 id="health">Health: 3</h2>
     <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">
         Your browser does not support the HTML canvas tag.
