Enemy, weapons, reset button
Added enemies and weapons. Also updated user interface with new text displays and added a reset button

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <h1 id="goal"></h1>
     <h2 id="points">Score: 0</h2>
     <h2 id="health">Health: 3</h2>
+    <h2 id="item">items: 0</h2>
     <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">
         Your browser does not support the HTML canvas tag.
     </canvas>
     <hr/>
-    <button>Reset</button>
+    <button onclick="reset()">Reset</button>
 
     <script src="script.js"></script>
 </body>
