--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         Your browser does not support the HTML canvas tag.
     </canvas>
     <hr/>
-    <button onclick="reset()">Reset</button>
+    <button onclick="map1()">Map 1</button>
+    <button onclick="map2()">Map 2</button>
 
     <script src="script.js"></script>
 </body>
