fixing map issue
Added new mapping buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         Your browser does not support the HTML canvas tag.
     </canvas>
     <hr/>
-    <button onclick="map1()">Map 1</button>
-    <button onclick="map2()">Map 2</button>
+    <button onclick="fetchMap('map1')">Map 1</button>
+    <button onclick="fetchMap('map2')">Map 2</button>
 
     <script src="script.js"></script>
 </body>
