--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
     <h1 id="goal"></h1>
     <h1 id="error"></h1>
-    <h2 id="points">Score: 0</h2>
-    <h2 id="health">Health: 3</h2>
-    <h2 id="item">items: 0</h2>
+    <div id="statBox">
+        <h2 id="points">Score: 0</h2>
+        <h2 id="health">Health: 3</h2>
+        <h2 id="item">items: 0</h2>
+    </div>
     <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">
         Your browser does not support the HTML canvas tag.
     </canvas>
     <hr/>
     <h3>Use the arrow keys to move!</h3>
-    <div id="box">
+    <div id="tileBox">
         <div id="playerTile">
             <p>Player</p>
         </div>
